[package]
name = "akhmat"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os="android")'.dependencies]


[dependencies]
jni = { version = "0.21.1",optional = true }
android_logger = { version = "0.14.1", optional = true }
dashmap = "6.0.1"
threadpool = "1.8.1"
log = "0.4.22"
md-5 = "0.11.0-pre.4"
anyhow = "1.0.68"
android-properties = "0.2.2"
libc = "0.2.158"
pnet="*"
#jni-android-sys = "*"

[lib]
crate-type = ["cdylib","staticlib"]

[features]
default = ["android"]
android = ["dep:jni", "dep:android_logger"]
#[profile.release]
#opt-level = 'z'